--- a/admin.html
+++ b/admin.html
@@ -52,7 +52,7 @@
                     <div class="login-header">
                         <i class="fas fa-shield-alt"></i>
                         <h2>Admin Access</h2>
-                        <p>Enter password to access admin panel</p>
+                        <p id="loginDescription">Enter password to access admin panel</p>
                     </div>
                     <form id="loginForm" class="login-form">
                         <div class="form-group">
