Fix car addition bug and change currency to INR
- Fixed issue where adding new cars wasn't updating the collection display
- Updated data loading to prioritize localStorage for current session data
- Added refreshData functionality to main page
- Changed default currency from USD to INR throughout the website
- Added currency formatting helper function
- Updated all price displays to use rupee symbol ()
- Added data persistence info panel in admin
- Improved user feedback messages

--- a/admin.html
+++ b/admin.html
@@ -104,6 +104,15 @@
                 <!-- Add Car Tab -->
                 <div id="addCar" class="tab-content active">
                     <h2>Add New Car</h2>
+                    
+                    <div class="info-panel">
+                        <i class="fas fa-info-circle"></i>
+                        <div>
+                            <strong>Data Storage:</strong> Cars are saved to your browser's local storage and will persist while using this site. 
+                            For permanent backup, download the generated data files from the Settings tab.
+                        </div>
+                    </div>
+                    
                     <form id="addCarForm" class="admin-form">
                         <div class="form-row">
                             <div class="form-group">
@@ -156,7 +165,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="carPrice">Purchase Price ($)</label>
+                                <label for="carPrice">Purchase Price (₹)</label>
                                 <input type="number" id="carPrice" step="0.01" min="0">
                             </div>
                         </div>
@@ -214,7 +223,7 @@
                                 <input type="text" id="wishlistSeries">
                             </div>
                             <div class="form-group">
-                                <label for="wishlistPrice">Expected Price ($)</label>
+                                <label for="wishlistPrice">Expected Price (₹)</label>
                                 <input type="number" id="wishlistPrice" step="0.01" min="0">
                             </div>
                         </div>
@@ -254,10 +263,12 @@
                         <div class="form-group">
                             <label for="currency">Currency</label>
                             <select id="currency">
+                                <option value="INR">INR (₹)</option>
                                 <option value="USD">USD ($)</option>
                                 <option value="EUR">EUR (€)</option>
                                 <option value="GBP">GBP (£)</option>
                                 <option value="CAD">CAD ($)</option>
+                                <option value="AUD">AUD ($)</option>
                             </select>
                         </div>
 
