--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="stat-card">
                         <i class="fas fa-dollar-sign"></i>
                         <div class="stat-info">
-                            <span class="stat-number" id="totalValue">$0</span>
+                            <span class="stat-number" id="totalValue">₹0</span>
                             <span class="stat-label">Total Value</span>
                         </div>
                     </div>
