--- a/wishlist.html
+++ b/wishlist.html
@@ -59,7 +59,7 @@
                     <div class="stat-card">
                         <i class="fas fa-dollar-sign"></i>
                         <div class="stat-info">
-                            <span class="stat-number" id="expectedCost">$0</span>
+                            <span class="stat-number" id="expectedCost">₹0</span>
                             <span class="stat-label">Expected Cost</span>
                         </div>
                     </div>
