--- a/statistics.html
+++ b/statistics.html
@@ -64,14 +64,14 @@
                     <div class="stat-card">
                         <i class="fas fa-dollar-sign"></i>
                         <div class="stat-info">
-                            <span class="stat-number" id="totalValue">$0</span>
+                            <span class="stat-number" id="totalValue">₹0</span>
                             <span class="stat-label">Total Investment</span>
                         </div>
                     </div>
                     <div class="stat-card">
                         <i class="fas fa-chart-line"></i>
                         <div class="stat-info">
-                            <span class="stat-number" id="averagePrice">$0</span>
+                            <span class="stat-number" id="averagePrice">₹0</span>
                             <span class="stat-label">Average Price</span>
                         </div>
                     </div>
