Add Git repository storage for permanent data persistence
- Created git-storage.js for GitHub API integration
- Updated data-manager.js to use Git storage as primary option
- Added Git storage configuration in admin panel
- Created setup guide documentation
- Data now saves permanently to private GitHub repository
- Maintains localStorage as fallback
- Enhanced security with encrypted config storage
- Added comprehensive setup and troubleshooting guide

--- a/statistics.html
+++ b/statistics.html
@@ -173,6 +173,7 @@
         </div>
     </footer>
 
+    <script src="js/git-storage.js"></script>
     <script src="js/data-manager.js"></script>
     <script src="js/statistics.js"></script>
 </body>
