--- a/wishlist.html
+++ b/wishlist.html
@@ -108,6 +108,7 @@
         </div>
     </footer>
 
+    <script src="js/git-storage.js"></script>
     <script src="js/data-manager.js"></script>
     <script src="js/wishlist.js"></script>
 </body>
