--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
         </div>
     </footer>
 
+    <script src="js/git-storage.js"></script>
     <script src="js/data-manager.js"></script>
     <script src="js/main.js"></script>
 </body>
