Enhanced car deletion functionality with bulk operations
- Improved single car deletion with detailed confirmation dialog
- Added bulk delete functionality with checkboxes
- Added select all/deselect all functionality
- Enhanced delete operations to work properly with Git storage
- Added async error handling and rollback for failed deletions
- Added progress indicators and detailed feedback messages
- Improved UI with better styling for bulk actions
- Added proper event notifications for data updates

--- a/admin.html
+++ b/admin.html
@@ -105,11 +105,10 @@
                 <div id="addCar" class="tab-content active">
                     <h2>Add New Car</h2>
                     
-                    <div class="info-panel">
+                    <div class="info-panel" id="storageInfoPanel">
                         <i class="fas fa-info-circle"></i>
-                        <div>
-                            <strong>Data Storage:</strong> Cars are saved to your browser's local storage and will persist while using this site. 
-                            For permanent backup, download the generated data files from the Settings tab.
+                        <div id="storageStatusMessage">
+                            <strong>Data Storage:</strong> <span id="storageStatusText">Loading...</span>
                         </div>
                     </div>
                     
@@ -198,6 +197,14 @@
                     <h2>Manage Cars</h2>
                     <div class="search-section">
                         <input type="text" id="manageSearch" placeholder="Search cars...">
+                        <div class="bulk-actions">
+                            <button id="selectAllCars" class="btn btn-secondary btn-small" onclick="adminPanel.toggleSelectAll()">
+                                <i class="fas fa-check-square"></i> Select All
+                            </button>
+                            <button id="deleteSelectedCars" class="btn btn-danger btn-small" onclick="adminPanel.deleteSelectedCars()" disabled>
+                                <i class="fas fa-trash"></i> Delete Selected
+                            </button>
+                        </div>
                     </div>
                     <div id="manageCarsList" class="manage-list"></div>
                 </div>
