Fix Git storage initialization and add debugging tools
- Fixed Git storage configuration loading
- Removed automatic page reload to prevent config loss
- Enhanced Git storage directory creation with better error handling
- Added Git operations test function
- Added test button in admin panel to verify Git storage
- Improved logging throughout initialization process

--- a/admin.html
+++ b/admin.html
@@ -306,6 +306,9 @@
                                 <button type="button" class="btn btn-secondary" onclick="adminPanel.testGitConnection()">
                                     <i class="fas fa-wifi"></i> Test Connection
                                 </button>
+                                <button type="button" class="btn btn-info" onclick="adminPanel.testGitOperations()">
+                                    <i class="fas fa-vial"></i> Test Git Operations
+                                </button>
                                 <button type="button" class="btn btn-success" onclick="adminPanel.setupGitStorage()">
                                     <i class="fas fa-cloud-upload-alt"></i> Setup Git Storage
                                 </button>
