--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="debug-info" id="debugInfo" style="background: #f0f0f0; padding: 10px; margin: 10px 0; border-radius: 5px; font-size: 12px; display: none;">
+                    <strong>Debug Info:</strong><br>
+                    <span id="debugText">Loading...</span><br>
+                    <button onclick="collectionView.addTestData()" style="margin-top: 5px; padding: 5px 10px; background: #007bff; color: white; border: none; border-radius: 3px; cursor: pointer;">
+                        Add Test Data
+                    </button>
+                </div>
             </div>
 
             <div class="controls-section">
@@ -101,6 +108,9 @@
                         </select>
                     </div>
                     <div class="view-toggle">
+                        <button id="refreshBtn" class="btn btn-secondary" title="Refresh Data">
+                            <i class="fas fa-refresh"></i> Refresh
+                        </button>
                         <button id="gridView" class="view-btn active" title="Grid View">
                             <i class="fas fa-th-large"></i>
                         </button>
