Improve image storage setup and user guidance
- Clean up debug logging from image URL generation
- Add helpful note about Git storage in admin form
- Add CSS styling for form notes
- Create comprehensive image setup guide (IMAGE_SETUP_GUIDE.md)
- Fixed data manager initialization for Git storage
- Keep debug method for testing image URL generation

The image storage workflow:
1. User configures Git storage in admin settings
2. Images uploaded through admin panel go to GitHub repo
3. Collection displays images using GitHub raw URLs
4. Works for both localhost and GitHub Pages deployment

--- a/admin.html
+++ b/admin.html
@@ -177,6 +177,10 @@
                         <div class="form-group">
                             <label for="carImage">Car Image</label>
                             <input type="file" id="carImage" accept="image/*">
+                            <small class="form-note">
+                                <i class="fas fa-info-circle"></i>
+                                Images are automatically uploaded to your configured Git repository. Configure Git storage in Settings for permanent image storage.
+                            </small>
                             <div id="imagePreview" class="image-preview"></div>
                         </div>
 
