Improve Git storage debugging and error handling
- Enhanced testGitStorageOperations with step-by-step testing
- Added detailed error messages in admin panel for Git operations
- Added testImageUpload functionality with proper error handling
- Created separate getBinaryFile method for handling image files
- Improved uploadImage method with better logging and binary file handling
- Better error categorization (404, 401, 403) with user-friendly messages

--- a/admin.html
+++ b/admin.html
@@ -323,6 +323,9 @@
                                 <button type="button" class="btn btn-info" onclick="adminPanel.testGitOperations()">
                                     <i class="fas fa-vial"></i> Test Git Operations
                                 </button>
+                                <button type="button" class="btn btn-warning" onclick="adminPanel.testImageUpload()">
+                                    <i class="fas fa-image"></i> Test Image Upload
+                                </button>
                                 <button type="button" class="btn btn-success" onclick="adminPanel.setupGitStorage()">
                                     <i class="fas fa-cloud-upload-alt"></i> Setup Git Storage
                                 </button>
