Add deletion test functionality and improve logging

--- a/admin.html
+++ b/admin.html
@@ -326,6 +326,9 @@
                                 <button type="button" class="btn btn-warning" onclick="adminPanel.testImageUpload()">
                                     <i class="fas fa-image"></i> Test Image Upload
                                 </button>
+                                <button type="button" class="btn btn-danger" onclick="adminPanel.testDeletion()">
+                                    <i class="fas fa-trash"></i> Test Deletion
+                                </button>
                                 <button type="button" class="btn btn-success" onclick="adminPanel.setupGitStorage()">
                                     <i class="fas fa-cloud-upload-alt"></i> Setup Git Storage
                                 </button>
