Migrate to Firebase database with real-time sync
- Replace Git storage with Firebase Firestore
- Add Firebase Authentication for secure access
- Add Firebase Storage for image uploads
- Create Firebase configuration UI in admin panel
- Add proper database structure with user isolation
- Include Firebase setup guide
- Maintain localStorage fallback for offline use
- Add real-time data sync across devices
- Implement proper security rules
- Support data export/import functionality

--- a/index.html
+++ b/index.html
@@ -157,7 +157,14 @@
         </div>
     </footer>
 
-    <script src="js/git-storage.js"></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-storage-compat.js"></script>
+    
+    <!-- App Scripts -->
+    <script src="js/firebase-manager.js"></script>
     <script src="js/data-manager.js"></script>
     <script src="js/main.js"></script>
 </body>
