Migrate to Firebase database with real-time sync
- Replace Git storage with Firebase Firestore
- Add Firebase Authentication for secure access
- Add Firebase Storage for image uploads
- Create Firebase configuration UI in admin panel
- Add proper database structure with user isolation
- Include Firebase setup guide
- Maintain localStorage fallback for offline use
- Add real-time data sync across devices
- Implement proper security rules
- Support data export/import functionality

--- a/admin.html
+++ b/admin.html
@@ -296,6 +296,7 @@
                             <p class="form-description">
                                 Configure Firebase for permanent data storage and real-time sync. Create a free Firebase project at 
                                 <a href="https://console.firebase.google.com" target="_blank" style="color: #667eea;">Firebase Console</a>
+                                <br><strong>📖 <a href="FIREBASE_SETUP_GUIDE.md" target="_blank" style="color: #28a745;">Complete Setup Guide with Screenshots</a></strong>
                             </p>
                             
                             <div class="form-group">
