Add debugging tools and cache reset functionality
- Add comprehensive debug logging for admin authentication flow
- Add 'Clear Cache & Reset' button to login form for troubleshooting
- Log config values, password state, and authentication status
- Improve clearLocalStorage utility
- Help users troubleshoot localStorage conflicts
- Better visibility into what's happening during login process

--- a/admin.html
+++ b/admin.html
@@ -63,6 +63,10 @@
                             <i class="fas fa-sign-in-alt"></i>
                             Login
                         </button>
+                        <button type="button" class="btn btn-warning" onclick="adminPanel.clearLocalStorage()" style="margin-top: 10px; width: 100%;">
+                            <i class="fas fa-trash"></i>
+                            Clear Cache & Reset
+                        </button>
                     </form>
                     <div id="loginError" class="error-message" style="display: none;"></div>
                 </div>
