Rename admin.html to admin-panel.html and update all navigation links
- Rename admin.html to admin-panel.html to force browser cache refresh
- Update navigation links in index.html, statistics.html, and wishlist.html
- Ensure all pages point to the new admin-panel.html
- Fix browser caching issues with admin page updates
- Maintain consistent navigation across all pages

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -30,7 +30,7 @@
                         <a href="wishlist.html" class="nav-link">Wishlist</a>
                     </li>
                     <li class="nav-item">
-                        <a href="admin.html" class="nav-link admin-link active">
+                        <a href="admin-panel.html" class="nav-link admin-link active">
                             <i class="fas fa-lock"></i> Admin
                         </a>
                     </li>
