--- a/wishlist.html
+++ b/wishlist.html
@@ -29,7 +29,7 @@
                         <a href="wishlist.html" class="nav-link active">Wishlist</a>
                     </li>
                     <li class="nav-item">
-                        <a href="admin.html" class="nav-link admin-link">
+                        <a href="admin-panel.html" class="nav-link admin-link">
                             <i class="fas fa-lock"></i> Admin
                         </a>
                     </li>
@@ -93,7 +93,7 @@
                     <i class="fas fa-heart"></i>
                     <h3>Your wishlist is empty</h3>
                     <p>Add items from the admin panel to start building your wishlist</p>
-                    <a href="admin.html" class="btn btn-primary">
+                    <a href="admin-panel.html" class="btn btn-primary">
                         <i class="fas fa-plus"></i>
                         Add Items
                     </a>
