--- a/statistics.html
+++ b/statistics.html
@@ -30,7 +30,7 @@
                         <a href="wishlist.html" class="nav-link">Wishlist</a>
                     </li>
                     <li class="nav-item">
-                        <a href="admin.html" class="nav-link admin-link">
+                        <a href="admin-panel.html" class="nav-link admin-link">
                             <i class="fas fa-lock"></i> Admin
                         </a>
                     </li>
